--- a/templates/pages/search.html
+++ b/templates/pages/search.html
@@ -39,84 +39,179 @@
     <div class="wrapper">
 
         <nav id="sidebar">
-           
-                <div class="sidebar-header">
-                    <h3>Search Users</h3>
-                </div>
+
+            <div class="sidebar-header">
+                <h3>Search Users</h3>
+            </div>
 
 
 
-                <!-- Skill tabs, code for nav tabs taken from https://www.w3schools.com/bootstrap4/bootstrap_navs.asp -->
+            <!-- Skill tabs, code for nav tabs taken from https://www.w3schools.com/bootstrap4/bootstrap_navs.asp -->
 
-                <ul class="nav nav-tabs">
+            <ul class="nav nav-tabs">
 
-                    <li class="tab-nav-item">
-                        <a class="nav-link active" data-toggle="tab" href="#skillstab">I'm proficient in...</a>
-                    </li>
-                    <li class="tab-nav-item">
-                        <a class="nav-link" data-toggle="tab" href="#desiredSkillsTab">Looking for...</a>
-                    </li>
+                <li class="tab-nav-item">
+                    <a class="nav-link active" data-toggle="tab" href="#skillstab">I'm proficient in...</a>
+                </li>
+                <li class="tab-nav-item">
+                    <a class="nav-link" data-toggle="tab" href="#desiredSkillsTab">Looking for...</a>
+                </li>
 
-                </ul>
+            </ul>
 
 
-                <div class="tab-content">
-                    <div id="skillstab" class="tab-pane fade show active">
-                        <div class="form-check">
-                            <label class="form-check-label">
-                                <input type="checkbox" class="form-check-input" value="">Option 1
-                            </label>
+            <div class="tab-content">
+                <div id="skillstab" class="tab-pane fade show active">
+
+                    <div class="row">
+                        <div class="col-6">
+
+
+                            <div class="form-check">
+                                <label class="form-check-label">
+                                    <input type="checkbox" class="form-check-input" value="">CSS
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <label class="form-check-label">
+                                    <input type="checkbox" class="form-check-input" value="">JavaScript
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <label class="form-check-label">
+                                    <input type="checkbox" class="form-check-input" value="" disabled>React
+                                </label>
+                            </div>
                         </div>
+
                         <div class="form-check">
-                            <label class="form-check-label">
-                                <input type="checkbox" class="form-check-input" value="">Option 2
-                            </label>
-                        </div>
-                        <div class="form-check">
-                            <label class="form-check-label">
-                                <input type="checkbox" class="form-check-input" value="" disabled>Option 3
-                            </label>
+                                <label class="form-check-label">
+                                    <input type="checkbox" class="form-check-input" value="">Vue
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <label class="form-check-label">
+                                    <input type="checkbox" class="form-check-input" value="">Angular
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <label class="form-check-label">
+                                    <input type="checkbox" class="form-check-input" value="" disabled>PHP
+                                </label>
+                            </div>
                         </div>
 
+                        <div class="form-check">
+                                <label class="form-check-label">
+                                    <input type="checkbox" class="form-check-input" value="">Ruby
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <label class="form-check-label">
+                                    <input type="checkbox" class="form-check-input" value="">C++
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <label class="form-check-label">
+                                    <input type="checkbox" class="form-check-input" value="" disabled>C#
+                                </label>
+                            </div>
+                        </div>
 
+                        <div class="col-6">
+
+
+                                <div class="form-check">
+                                    <label class="form-check-label">
+                                        <input type="checkbox" class="form-check-input" value="">UX
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <label class="form-check-label">
+                                        <input type="checkbox" class="form-check-input" value="">Web Design
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <label class="form-check-label">
+                                        <input type="checkbox" class="form-check-input" value="" disabled>SQL
+                                    </label>
+                                </div>
+
+                                <div class="form-check">
+                                        <label class="form-check-label">
+                                            <input type="checkbox" class="form-check-input" value="">Java
+                                        </label>
+                                    </div>
+                                    <div class="form-check">
+                                        <label class="form-check-label">
+                                            <input type="checkbox" class="form-check-input" value="">Rust
+                                        </label>
+                                    </div>
+                                    <div class="form-check">
+                                        <label class="form-check-label">
+                                            <input type="checkbox" class="form-check-input" value="" disabled>Go
+                                        </label>
+                                    </div>
+
+
+                                    <div class="form-check">
+                                            <label class="form-check-label">
+                                                <input type="checkbox" class="form-check-input" value="">Swift
+                                            </label>
+                                        </div>
+                                        <div class="form-check">
+                                            <label class="form-check-label">
+                                                <input type="checkbox" class="form-check-input" value="">Kotlin
+                                            </label>
+                                        </div>
+                                        <div class="form-check">
+                                            <label class="form-check-label">
+                                                <input type="checkbox" class="form-check-input" value="" disabled>Perl
+                                            </label>
+                                        </div>
+                            </div>
+                        <!-- End row -->
                     </div>
-                    <div id="desiredSkillsTab" class="tab-pane fade">
-                        <h3>Python</h3>
-                        <p>Stars.</p>
-                    </div>
+
+
                 </div>
+                <div id="desiredSkillsTab" class="tab-pane fade">
+                    <h3>Python</h3>
+                    <p>Stars.</p>
+                </div>
+            </div>
 
-                <ul class="list-unstyled components">
+            <ul class="list-unstyled components">
 
 
 
 
-                    <li>
-                        <a href="#">About</a>
-                    </li>
-                    <li>
-                        <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false"
-                            class="dropdown-toggle">Pages</a>
-                        <ul class="collapse list-unstyled" id="pageSubmenu">
-                            <li>
-                                <a href="#">Page 1</a>
-                            </li>
-                            <li>
-                                <a href="#">Page 2</a>
-                            </li>
-                            <li>
-                                <a href="#">Page 3</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#">Portfolio</a>
-                    </li>
-                    <li>
-                        <a href="#">Contact</a>
-                    </li>
-                </ul>
-           
+                <li>
+                    <a href="#">About</a>
+                </li>
+                <li>
+                    <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false"
+                        class="dropdown-toggle">Pages</a>
+                    <ul class="collapse list-unstyled" id="pageSubmenu">
+                        <li>
+                            <a href="#">Page 1</a>
+                        </li>
+                        <li>
+                            <a href="#">Page 2</a>
+                        </li>
+                        <li>
+                            <a href="#">Page 3</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">Portfolio</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+            </ul>
+
         </nav>
 
     </div>
