--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -69,14 +69,14 @@
 
                         <div class="row justify-content-center">
                             <div class="col-12 col-md-6 d-none d-md-block">
-                                    {% include 'layouts/profile_card.html' %}
+                                    {% include 'components/profile_card.html' %}
                             </div>
 
                             {% endif %}
 
                             {% if loop.index % 2 == 0 %}
                             <div class="col-12 col-md-6">
-                                    {% include 'layouts/profile_card.html' %}
+                                    {% include 'components/profile_card.html' %}
                             </div>
                         </div>
 
