add padding to skill columns

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -784,4 +784,8 @@ ul ul a {
   padding-left: 30px !important;
   background: #7791B4;
 }
+
+.skill-column {
+  padding: 2rem;
+}
 /*# sourceMappingURL=main.css.map */
