--- a/templates/pages/search.html
+++ b/templates/pages/search.html
@@ -62,57 +62,66 @@
             <!-- Tab Contents -->
 
             <div class="tab-content">
+
+                <!-- Begin "I'm proficient in..." Skills Tab -->
                 <div id="skillstab" class="tab-pane fade show active">
+                    <div class="skill-column">
 
-                    {% include 'components/skills_list.html' %}
+                        {% include 'components/skills_list.html' %}
 
+                    </div>
+
+                    <!-- End "I'm proficient in..." Skills Tab -->
                 </div>
 
-                <!-- End "I'm proficient in..." Skills Tab -->
 
+                <!-- Begin "Looking for..." desired skills tab -->
                 <div id="desiredSkillsTab" class="tab-pane fade">
 
-                    {% include 'components/skills_list.html' %}
+                    <div class="skill-column">
 
+                        {% include 'components/skills_list.html' %}
+
+
+                    </div>
                     <!-- End "Looking for..." desired skills tab -->
-
                 </div>
             </div>
-    </div>
 
 
 
-    <ul class="list-unstyled components">
+            <ul class="list-unstyled components">
 
 
 
 
-        <li>
-            <a href="#">About</a>
-        </li>
-        <li>
-            <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Pages</a>
-            <ul class="collapse list-unstyled" id="pageSubmenu">
                 <li>
-                    <a href="#">Page 1</a>
+                    <a href="#">About</a>
                 </li>
                 <li>
-                    <a href="#">Page 2</a>
+                    <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false"
+                        class="dropdown-toggle">Pages</a>
+                    <ul class="collapse list-unstyled" id="pageSubmenu">
+                        <li>
+                            <a href="#">Page 1</a>
+                        </li>
+                        <li>
+                            <a href="#">Page 2</a>
+                        </li>
+                        <li>
+                            <a href="#">Page 3</a>
+                        </li>
+                    </ul>
                 </li>
                 <li>
-                    <a href="#">Page 3</a>
+                    <a href="#">Portfolio</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
                 </li>
             </ul>
-        </li>
-        <li>
-            <a href="#">Portfolio</a>
-        </li>
-        <li>
-            <a href="#">Contact</a>
-        </li>
-    </ul>
 
-    </nav>
+        </nav>
 
     </div>
 
