--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -24,6 +24,7 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600|Roboto&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         type="text/css" />
 
@@ -37,7 +38,7 @@
 
 
 
-
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/custom-checkbox-radio.css')}}" /> 
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/main.css')}}" />
 </head>
 
